--- a/Templates/Rulesets/ruleset-empty/osu.Game.Rulesets.EmptyFreeform/osu.Game.Rulesets.EmptyFreeform.csproj
+++ b/Templates/Rulesets/ruleset-empty/osu.Game.Rulesets.EmptyFreeform/osu.Game.Rulesets.EmptyFreeform.csproj
@@ -10,6 +10,9 @@
     <EmbeddedResource Include="Resources\**" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ppy.osu.Framework" Version="2021.723.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\..\..\osu.Game\osu.Game.csproj" />
   </ItemGroup>
 </Project>
